# egg

./: .gitignore  .gitmodules  CMakeLists.txt
assets/materials/cliff/: cliff.json
assets/materials/cliff/shaders/: cliff.frag  cliff.vert
assets/materials/default/: default.json
assets/materials/default/shaders/: default.frag  default.vert
examples/example1/: CMakeLists.txt  main.cpp
examples/example1/shaders/: fragment.glsl  vertex.glsl
examples/example2/: CMakeLists.txt  main.cpp
examples/example2/shaders/: example2.frag  example2.vert
examples/example3/: CMakeLists.txt  main.cpp
examples/example3/shaders/: example3.vert
include/egg/: Camera.hpp  ElementBuffer.hpp  Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.h  VertexBufferLayout.hpp  egg.hpp  shader.hpp  window.hpp
include/egg/gl/: ElementBuffer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.hpp  gl_utils.hpp
src/: Camera.cpp  ElementBuffer.cpp  Material.cpp  Mesh.cpp  Model.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  shader.cpp  window.cpp
src/gl/: ElementBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp
